final commit, everything should be working properly

--- a/index.html
+++ b/index.html
@@ -39,24 +39,34 @@
                   <label><input type="checkbox" id="cbox1" value="first_checkbox"> Blues</label>
                   <label><input type="checkbox" id="cbox1" value="first_checkbox"> Hip hop</label><br>
          </article>
-         <article class="songname">
-            <h2>The Wall</h2>
-               <li class="li">Pink Floyd&nbsp</li>
-               <li class="li">| &nbsp The Wall &nbsp</li>
-               <li class="li">| &nbsp Classic Rock</li>
+      <div id="innerHTMLtxt" class="songname">
+         <article>
+            <!-- <h2>The Wall</h2>
+               <ul>
+                  <li class="li">Pink Floyd&nbsp</li>
+                  <li class="li">| &nbsp The Wall &nbsp</li>
+                  <li class="li">| &nbsp Classic Rock</li>
+               </ul>
             <h2>Stairway to Heaven</h2>
-               <li class="li">Led Zeppelin&nbsp</li>
-               <li class="li">| &nbsp Stairway to Heaven &nbsp</li>
-               <li class="li">| &nbsp Classic Rock</li>
+               <ul>
+                  <li class="li">Led Zeppelin&nbsp</li>
+                  <li class="li">| &nbsp Stairway to Heaven &nbsp</li>
+                  <li class="li">| &nbsp Classic Rock</li>
+               </ul>
             <h2>Helter Skelter</h2>
-               <li class="li">The Beatles &nbsp</li>
-               <li class="li">| &nbsp The White Album &nbsp</li>
-               <li class="li">| &nbspGenre</li>
+               <ul>
+                  <li class="li">The Beatles &nbsp</li>
+                  <li class="li">| &nbsp The White Album &nbsp</li>
+                  <li class="li">| &nbspGenre</li>
+               </ul>
             <h2>Song Name</h2>
-               <li class="li">Artist name &nbsp</li>
-               <li class="li">| &nbsp Album name &nbsp</li>
-               <li class="li">| &nbsp Genre</li>
+               <ul>
+                  <li class="li">Artist name &nbsp</li>
+                  <li class="li">| &nbsp Album name &nbsp</li>
+                  <li class="li">| &nbsp Genre</li>
+               </ul> -->
          </article>
       </div>
+      <script type="text/javascript" src="songs.js"></script>
    </body>
 </html>
